Opened 3 years ago
Closed 3 years ago
#14326 closed bug (fixed)
MediaPlayer: audio streaming broken
Reported by: | KapiX | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/MediaPlayer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
stream: http://live-icy.gss.dr.dk:8000/A/A29H.mp3
Culprit: https://git.haiku-os.org/haiku/commit/?id=3248de3de47011137e0c667a7247dd424c827bd7
Changing mode to never remember position before ever playing the stream doesn't help.
Change History (10)
comment:1 by , 3 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 3 years ago
Owner: | changed from | to
---|
comment:4 by , 3 years ago
I pushed it for review, but you merged it. I currently don't have a working soundcard which doesn't ease testing...
comment:6 by , 3 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Still broken for me as of hrev52205.
If I run MediaPlayer http://live-icy.gss.dr.dk:8000/A/A29H.mp3
I get one playlist item with duration of 0:05.
comment:7 by , 3 years ago
This looks like a different problem. Maybe caused by the recent changes in the ffmpeg decoder?
[mp3 @ 0x18cd0680] Estimating duration from bitrate, this may be inaccurate
ffmpeg somehow doesn't "get" that this is a stream and will play endlessly. It may be because Barrett removed the link between the ffmpeg codec and container in https://git.haiku-os.org/haiku/commit/?id=9467826d3121b639c710199b11ffa56e702aab13 ?
comment:9 by , 3 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Now podcasts (which are downloaded but have a fixed duration) won't allow seeking. So the "streaming" flag doesn't do what I expected.
comment:10 by , 3 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Fixed properly in hrev52212.
@waddlesplash I think you merged the commit in the description.